--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,7 @@
     "boostrap": "^2.0.0",
     "express": "^4.16.3",
     "mobx": "^5.0.3",
+    "mobx-react": "^5.2.3",
     "mongoose": "^5.1.5",
     "react": "^16.4.1",
     "react-bootstrap": "^0.32.1",
