--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,15 @@
     "react-images-uploader": "^1.2.0-rc1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.4"
+    "react-scripts": "1.1.4",
+    "autobind-decorator": "^1.3.4"
+  },
+  "devDependencies": {
+    "babel-core": "^6.9.1",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-1": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
